syntax = "proto3";

option go_package="sum/sumpb";
package sum;

message SumRequest {
  int64 addend_one = 1;
  int64 addend_two = 2;
}

message SumResponse {
  int64 result = 1;
}

service SumService {
  rpc Sum(SumRequest) returns (SumResponse) {};
}